<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rg_status_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_retweets"
            style="@style/RadioButtonStatusDetailTab"
            android:text="@string/item_report"/>

        <RadioButton
            android:id="@+id/rb_comments"
            style="@style/RadioButtonStatusDetailTab"
            android:checked="true"
            android:text="@string/item_comment"/>

        <RadioButton
            android:id="@+id/rb_likes"
            style="@style/RadioButtonStatusDetailTab"
            android:text="@string/item_attitude"/>
    </RadioGroup>

</LinearLayout>